# ChangeLog for www-apache/mod_perl
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apache/mod_perl/ChangeLog,v 1.31 2007/01/12 18:12:24 mcummings Exp $

  12 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  +files/2.0.3/75_mod_perl.conf, +files/2.0.3/apache2-mod_perl-startup.pl:
  bug 161292, missing 2.0.3 files added :)

*mod_perl-2.0.3 (09 Jan 2007)

  09 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  +mod_perl-2.0.3.ebuild:
  Version bump

  06 Jan 2007; Bryan Østergaard <kloeri@gentoo.org> mod_perl-2.0.2.ebuild:
  Stable on Alpha.

*mod_perl-2.0.1-r3 (23 Oct 2006)

  23 Oct 2006; Michael Cummings <mcummings@gentoo.org>
  +mod_perl-2.0.1-r3.ebuild, mod_perl-2.0.2.ebuild:
  Altered dep for Apache-Test to be >= 1.27 - 1.28 is in the tree and
  supercedes these versions.

  16 Oct 2006; Michael Cummings <mcummings@gentoo.org>
  -mod_perl-1.27-r1.ebuild, -mod_perl-1.27-r2.ebuild,
  mod_perl-1.27-r4.ebuild, mod_perl-1.29.ebuild, -mod_perl-1.99.11.ebuild,
  -mod_perl-1.99.16.ebuild, -mod_perl-2.0.1-r1.ebuild,
  mod_perl-2.0.1-r2.ebuild:
  Marking amd64 stable; cleaning up ebuilds

  02 Sep 2006; Bryan Østergaard <kloeri@gentoo.org> mod_perl-2.0.2.ebuild:
  Stable on ia64.

  25 Jun 2006; Marcus D. Hanwell <cryos@gentoo.org> mod_perl-2.0.2.ebuild:
  Marked stable on amd64, closes bug 136823.

  12 Jun 2006; Michael Cummings <mcummings@gentoo.org>
  mod_perl-2.0.2.ebuild:
  Marking sparc stable

  04 Jun 2006; Michael Stewart <vericgar@gentoo.org> mod_perl-1.29.ebuild,
  mod_perl-2.0.1-r1.ebuild, mod_perl-2.0.1-r2.ebuild, mod_perl-2.0.2.ebuild:
  Address dependency issues caused by depend.apache. Refer to bug 107127.

  27 Apr 2006; Alec Warner <antarus@gentoo.org>
  files/digest-mod_perl-1.27-r1, files/digest-mod_perl-1.27-r2,
  files/digest-mod_perl-1.27-r4, files/digest-mod_perl-1.29,
  files/digest-mod_perl-1.99.11, files/digest-mod_perl-1.99.16,