@@ -1,6 +1,10 @@
 # ChangeLog for www-apache/mod_perl
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apache/mod_perl/ChangeLog,v 1.31 2007/01/12 18:12:24 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apache/mod_perl/ChangeLog,v 1.32 2007/01/16 06:09:19 josejx Exp $
+
+  16 Jan 2007; Joseph Jezak <josejx@gentoo.org> mod_perl-1.29.ebuild,
+  mod_perl-2.0.2.ebuild:
+  Marked ppc stable for bug #162244.
 
   12 Jan 2007; Michael Cummings <mcummings@gentoo.org>
   +files/2.0.3/75_mod_perl.conf, +files/2.0.3/apache2-mod_perl-startup.pl:
